cleaning up the notebook for DCC, UCI Digits full daset

--- a/MLHO_01_OCR_digits.ipynb
+++ b/MLHO_01_OCR_digits.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "# Overview\n",
     "\n",
-    "In this workshop you will write code to recognize hand-written digits. We will use the [UCI ML Hand-Written Digits dataset](https://scikit-learn.org/stable/datasets/index.html#optical-recognition-of-handwritten-digits-dataset), which contains 5620 labeled examples. Scikit-learn [includes 1797 examples](http://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_digits.html#sklearn.datasets.load_digits) that comprise only the test portion of the UCI dataset; we will use it as both the train and test set. To attempt to recognize the characters, we will use two of the most popular algorithms in ML: [K-Means](https://en.wikipedia.org/wiki/K-means_clustering) and [Logistic Regression](https://en.wikipedia.org/wiki/Logistic_regression).\n",
-    "\n",
-    "## K-Means\n",
-    "\n",
-    "K-Means is an unsupervised learning algorithm that does clustering. We will train it on images of hand-written digits without telling it what those digits are, and it will attempt to group them together based on similarity. We will then look at the results to see the strengths and weaknesses of unsupervised learning.\n",
+    "In this workshop you will write code to recognize hand-written digits. We will use the [UCI ML Hand-Written Digits dataset](https://scikit-learn.org/stable/datasets/index.html#optical-recognition-of-handwritten-digits-dataset), which contains 5620 labeled examples. Scikit-learn [includes 1797 examples](http://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_digits.html#sklearn.datasets.load_digits) that comprise only the test portion of the UCI dataset; we will use it as both the train and test set. To attempt to recognize the characters, we will use one of the most popular algorithms in ML: [Logistic Regression](https://en.wikipedia.org/wiki/Logistic_regression).\n",
     "\n",
     "## Logistic Regression\n",
     "\n",
@@ -21,10 +17,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Glossary\n",
+    "## Glossary\n",
     "**Classification:** Classification is the act of assigning a label to a new example based on its similarity to previously examined examples.\n",
-    "\n",
-    "**Cluster:** A cluster is a collection of similar examples. This typically refers to clusters which have been created by a clustering algorithm; an unsupervised assignment of examples to clusters based on their similarity.\n",
     "\n",
     "**Feature:** Observable characteristics that can be converted into machine-readable values that a machine learning algorithm can consider in creating a model that allows prediction of a target value. Total purchases in the past 90 days is a feature that can help predict the amount of purchasing in the next 90 days. See also 'X'.\n",
     "\n",
@@ -63,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 1: The Dataset\n",
+    "# Part 1: The Dataset\n",
     "\n",
     "This code shows how to load the sample dataset. [Scikit-learn](https://scikit-learn.org/stable/index.html) is a popular library of Machine Learning tools. Scikit-learn's [datasets](https://scikit-learn.org/stable/datasets/index.html#toy-datasets) package has 7 well known example datasets to experiment with.\n",
     "\n",
@@ -74,9 +68,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "digits type:\n",
+      "<class 'sklearn.utils.Bunch'>\n",
+      "\n",
+      "digits dir:\n",
+      "['DESCR', 'data', 'images', 'target', 'target_names']\n",
+      "\n",
+      "digits.images type:\n",
+      "<type 'numpy.ndarray'>\n",
+      "\n",
+      "digits.data[0] type:\n",
+      "<type 'numpy.ndarray'>\n",
+      "\n",
+      "Image:\n",
+      "[[ 0.  0.  5. 13.  9.  1.  0.  0.]\n",
+      " [ 0.  0. 13. 15. 10. 15.  5.  0.]\n",
+      " [ 0.  3. 15.  2.  0. 11.  8.  0.]\n",
+      " [ 0.  4. 12.  0.  0.  8.  8.  0.]\n",
+      " [ 0.  5.  8.  0.  0.  9.  8.  0.]\n",
+      " [ 0.  4. 11.  0.  1. 12.  7.  0.]\n",
+      " [ 0.  2. 14.  5. 10. 12.  0.  0.]\n",
+      " [ 0.  0.  6. 13. 10.  0.  0.  0.]]\n",
+      "\n",
+      "Data:\n",
+      "[ 0.  0.  5. 13.  9.  1.  0.  0.  0.  0. 13. 15. 10. 15.  5.  0.  0.  3.\n",
+      " 15.  2.  0. 11.  8.  0.  0.  4. 12.  0.  0.  8.  8.  0.  0.  5.  8.  0.\n",
+      "  0.  9.  8.  0.  0.  4. 11.  0.  1. 12.  7.  0.  0.  2. 14.  5. 10. 12.\n",
+      "  0.  0.  0.  0.  6. 13. 10.  0.  0.  0.]\n",
+      "\n",
+      "Num Examples: 1797\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_digits\n",
     "import pandas as pd\n",
@@ -101,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2: The Digits\n",
+    "# Part 2: The Digits\n",
     "\n",
     "Now we will take a look at the digit images using Matplotlib. We could simply plot the **image** field directly; instead we will use the [numpy reshape](https://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html) method that we will need later. It allows us to reshape arrays from one dimensional to two dimensional, or the reverse, or from any number of dimensions to any other. Here we use it to shape the linear array of grayscale values back into its original 8x8 image layout.\n",
     "\n",
@@ -112,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -149,27 +180,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 7: Display With Histograms\n",
+    "# Part 3: Display With Histograms\n",
     "\n",
     "In addition to displaying the digits, we will want to display a histogram showing the number of predictions that matched for each digit. This function will do that for us."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2, 4, 5, and 7 have been split into two clusters each, 1 seems to appear in three clusters, one of which looks like it is mixed with 4 and another that looks like it has some 8 in it.\n",
-    "\n",
-    "### Part 6: Measuring K-Means Effectiveness\n",
-    "\n",
-    "We have an idea of what is happening with K-Means by looking at its behavior with three different numbers of cluster centers. Now let's take a closer look at how well it performed in creating one class for each digit.\n",
-    "\n",
-    "Let's start with a function for plotting the images with their associated histograms."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +209,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 8: Logistic Regression\n",
+    "# Part 4: Logistic Regression\n",
     "\n",
     "We are given the labels for these images, which allows us to do supervised learning. Logistic regression is a fast classification algorithm that is applicable to many problems. It provides results that are good enough in many cases and is often used to establish a baseline accuracy when doing trials with more advanced algorithms."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -229,14 +247,14 @@
     "\n",
     "Still, though, this data is not very human interpretable. But that's OK as long as the computer knows what it means. The stimulation state of the neurons in your visual cortex is also probably pretty hard to interpret directly; that's OK as long as you think \"8\" when you see an 8.\n",
     "\n",
-    "### Part 9: Measuring Logit Effectiveness\n",
+    "# Part 5: Measuring Logit Effectiveness\n",
     "\n",
-    "Let's take the model we just trained, and do the same counting process we did with the K-Means model, then plot the coefficients with their predictive accuracy histograms. We'll also store an array of predictions and another of targets to make it easy to calculate the accuracy in the next step."
+    "Let's take the model we just trained and count the number of times each predicted value was associated with each target value. Then we'll plot the coefficients with their predictive accuracy histograms. We'll also store an array of predictions and another of targets to make it easy to calculate the accuracy in the next step."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +307,7 @@
    "source": [
     "Victory! Over 99% accuracy! But let's not get too excited; there is a problem. We used the entire dataset to train a model, then used the same data to test it. That is a common flaw in machine learning; we created a model that memorized our training dataset and regurgitated the same answers back. It did not show us how it would respond to character images it had not seen before. We do not know if this model would give us generalizable predictions from novel data.\n",
     "\n",
-    "### Part 10: Train / Test Split\n",
+    "# Part 6: Train / Test Split\n",
     "\n",
     "To fix that problem, we will use a train/test split. We will divide our available data into a training set with which we will train our model and a test set that we will use to evaluate its accuracy.\n",
     "\n",
@@ -300,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +330,7 @@
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,14 +348,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 11: Logit Evaluation With The Test Data\n",
+    "# Part 7: Logit Evaluation With The Test Data\n",
     "\n",
-    "That is unremarkable. It looks the same as the model from the full dataset, but there are tiny differences in there. Now we can do the proper evaluation using the test data. Let's also collect the predicted and actual values so we can calculate an accuracy score in the final step."
+    "Now we can do the evaluation using the test data. Let's also collect the predicted and actual values so we can calculate an accuracy score in the final step."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -353,10 +371,11 @@
    ],
    "source": [
     "predictions = logit.predict(X_test)\n",
+    "targets = y_test\n",
     "\n",
     "counts = np.zeros((10,10))\n",
     "for i in range(len(predictions)):\n",
-    "    counts[predictions[i]][y_test[i]] += 1\n",
+    "    counts[predictions[i]][targets[i]] += 1\n",
     "\n",
     "imshow_and_histogram(logit.coef_, counts)"
    ]
@@ -365,18 +384,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 12: Looking Good!\n",
-    "\n",
     "That looks like a good result. We trained the model in under a second and got a very high accuracy. Since we used a random train/test split, we can be confident that these results give a fair representation of the actual performance of this model.\n",
     "\n",
-    "### Part 13: Accuracy Score\n",
+    "# Part 8: Accuracy Score\n",
     "\n",
     "There are various scoring metrics for ML models. For this one, simple accuracy should suffice. What percentage of our predictions were correct?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +405,7 @@
     }
    ],
    "source": [
-    "accuracy = accuracy_score(y_test, predictions)\n",
+    "accuracy = accuracy_score(targets, predictions)\n",
     "print \"Accuracy: %0.2f%%\" % ( 100.0* accuracy)\n"
    ]
   },
@@ -396,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 14: Results for Scikit-learn Digits\n",
+    "# Part 9: Results for Scikit-learn Digits\n",
     "\n",
     "Over 95 percent accuracy at recognizing hand-written digits with less than one second of training. That's pretty cool!\n",
     "\n",
