--- a/MLHO_01_OCR_digits.ipynb
+++ b/MLHO_01_OCR_digits.ipynb
@@ -490,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That is a more complicated change. The accuracy improved, but it took 7 times as long to run. If we plan to train once and run the model for a long time or if the value of being right is high, that cost is a good investment. But that will not always be the case.\n",
+    "That is a more complicated change. The accuracy improved, but it took twice as long to run. If we plan to train once and run the model for a long time or if the value of being right is high, that cost is a good investment. But that will not always be the case.\n",
     "\n",
     "# Part 16: Conclusion\n",
     "\n",
